syntax = "proto3";

package marks;

service MarksPortal {
  rpc GetMarks (stream StudentRequest) returns (stream MarksReply) {}
}

// The request message containing the student  name
message StudentRequest {
  string name = 1;
}

// The reply containing the marks
message MarksReply {
  string student_name = 1;
  Marks marks = 2;
}

message Marks {
  string DS = 2;
  string DBMS = 3;
  string Compilers = 4;
  string Graphics = 5;
}